# fulltime-prediction-markets

./: .dockerignore  .gitignore  Anchor.toml  Cargo.toml  DEMO-SCRIPT.md  DEMO_SCRIPT_4_MINUTES.md  Dockerfile  GASLESS.md  INTERVIEW.md  README.md  RECORDING-PLAN.md  ROADMAP.md  SUBMISSION-agent.md  SUBMISSION-fan.md  SUBMISSION.md  SUBMISSION_TECHNICAL_DOCUMENTATION.md  VERIFY.md  docker-compose.yml  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: deploy-devnet.yml
app/: .env.example  .gitignore  DESIGN_BRIEF.md  PRODUCT.md  create-demo-market.mjs  create-open-market.mjs  ft-agent.mjs  ft-bet-sim.mjs  ft-check-proof.mjs  ft-claim-test.mjs  ft-demo.mjs  ft-e2e-test.mjs  ft-exchange-demo.mjs  ft-find-fixtures.mjs  ft-parlay-demo.mjs  ft-prop-demo.mjs  ft-real-settle.mjs  next.config.js  package-lock.json  package.json  tailwind.config.js  txline-explore.mjs  txline-idl-check.mjs  txline-probe.mjs  txline-scores.mjs  txline-subscribe.mjs
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/bet/: page.tsx
app/src/components/: Header.tsx  Hero.tsx  LiveMatchCenter.tsx  MatchCard.tsx  TournamentGrid.tsx  WalletProvider.tsx
app/src/lib/: demo-market.json  exchange.ts  gasless.ts  market.ts  markets.ts  parlay.ts  txline-server.ts  txline.ts  verify.ts
bot/: package.json  tsconfig.json
bot/src/: keeper.ts  settlement.ts  txline.ts
keeper/: README.md  keeper.mjs  package-lock.json  package.json  policy.mjs  policy.test.mjs
programs/fulltime/: Cargo.toml
programs/fulltime/src/: lib.rs
scripts/: fetch-fixtures.ts  judge-summary.mjs  subscribe.ts
tests/: fulltime.ts
tests/hermetic/: README.md  deposit.test.mjs  dump-artifacts.mjs  package-lock.json  package.json  settle.test.mjs
tests/hermetic/artifacts/: MANIFEST.json  proof.json  roots.json
(+13 files in other folders)
