[package]
name = "fulltime"
version = "0.1.0"
description = "Full-Tournament Auto-Market — prediction markets with TxLINE CPI settlement"
edition = "2021"
rust-version = "1.75.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = []
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
spl-token-2022 = { version = "3", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2", features = ["no-entrypoint"] }
bytemuck = "1"

[profile.release]
opt-level = "s"
debug = false
overflow-checks = true
lto = true
codegen-units = 1
